Add support for encoding byte strings, rename number-encoding functions, and test that multiple things can be encoded and decoded by ScalarLiteralOps.